Load pages, make list sortable

--- a/index.html
+++ b/index.html
@@ -25,42 +25,52 @@
 </nav>
 
 <nav class="panel navigator" id="navigator">
-    <p class="panel-heading">Страницы</p>
-    <div class="panel-search">
-        <p class="control has-icons-left">
-            <input class="input search" id="page-search" type="text" placeholder="фильтр">
-            <span class="icon is-left">
-                <i class="fa fa-search"></i>
-            </span>
-        </p>
-    </div>
-    <div class="pages">
-        <a class="panel-block">страница</a>
-        <a class="panel-block">страница</a>
-        <a class="panel-block">страница</a>
-        <a class="panel-block">страница</a>
-        <a class="panel-block">страница</a>
-    </div>
-
-    <p class="panel-heading">Проекты</p>
-    <div class="panel-search">
-        <p class="control has-icons-left">
-            <input class="input search" id="project-search" type="text" placeholder="фильтр">
-            <span class="icon is-left">
-                <i class="fa fa-search"></i>
-            </span>
-        </p>
-    </div>
-    <div class="projects">
-        <a class="panel-block">проект</a>
-        <a class="panel-block">проект</a>
-        <a class="panel-block">проект</a>
-        <a class="panel-block">проект</a>
-        <a class="panel-block">проект</a>
+    <div class="pages" id="page-search">
+        <p class="panel-heading">Страницы</p>
+        <div class="panel-search field has-addons">
+            <p class="control has-icons-left">
+                <input class="input search" type="text" placeholder="фильтр">
+                <span class="icon is-left">
+                    <i class="fa fa-search"></i>
+                </span>
+            </p>
+            <p class="control">
+                <button class="button is-dark sort" data-sort="text">
+                    <i class="fa fa-sort-alpha-asc"></i>
+                </button>
+            </p>
+        </div>
+        <div class="items"></div>
     </div>
 
-    <p class="panel-heading">Информация</p>
-    <div class="selections"></div>
+    <div class="projects" id="project-search">
+        <p class="panel-heading">Проекты</p>
+        <div class="panel-search field has-addons">
+            <p class="control has-icons-left">
+                <input class="input search" type="text" placeholder="фильтр">
+                <span class="icon is-left">
+                    <i class="fa fa-search"></i>
+                </span>
+            </p>
+            <p class="control">
+                <button class="button is-dark sort" data-sort="text">
+                    <i class="fa fa-sort-alpha-asc"></i>
+                </button>
+            </p>
+        </div>
+        <div class="items">
+            <a class="panel-block">проект</a>
+            <a class="panel-block">проект</a>
+            <a class="panel-block">проект</a>
+            <a class="panel-block">проект</a>
+            <a class="panel-block">проект</a>
+        </div>
+    </div>
+
+    <div class="selection" id="selection">
+        <p class="panel-heading">Информация</p>
+        <div class="items"></div>
+    </div>
 </nav>
 
 <div class="wrapper">
