--- a/index.html
+++ b/index.html
@@ -76,7 +76,13 @@
 <div class="wrapper">
     <div class="notification is-success"></div>
 
-    <div class="tabs is-toggle" id="tabs"><ul></ul></div>
+    <div class="tabs is-toggle" id="tabs">
+        <ul></ul>
+        <div class="buttons">
+            <span class="button is-dark add-tab" title="Добавить таб"><i class="fa fa-plus-circle" aria-hidden="true"></i></span>
+            <span class="button is-dark close-tabs" title="Закрыть все табы"><i class="fa fa-times-circle" aria-hidden="true"></i></span>
+        </div>
+    </div>
 
     <nav class="level navbar" id="controls">
         <div class="level-left">
