Add page from page search

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
     <div class="tabs is-toggle" id="tabs">
         <ul></ul>
         <div class="buttons">
-            <span class="button is-dark add-tab" title="Добавить таб"><i class="fa fa-plus-circle" aria-hidden="true"></i></span>
-            <span class="button is-dark close-tabs" title="Закрыть все табы"><i class="fa fa-times-circle" aria-hidden="true"></i></span>
+            <span class="button is-dark add-tab" title="Добавить таб"><i class="fa fa-plus-circle"></i></span>
+            <span class="button is-dark close-tabs" title="Закрыть все табы"><i class="fa fa-times-circle"></i></span>
         </div>
     </div>
 
