Allow changing output device (customise Howler library)

--- a/index.html
+++ b/index.html
@@ -59,11 +59,7 @@
             </p>
         </div>
         <div class="items">
-            <a class="panel-block">проект</a>
-            <a class="panel-block">проект</a>
-            <a class="panel-block">проект</a>
-            <a class="panel-block">проект</a>
-            <a class="panel-block">проект</a>
+            <a class="panel-block">в разработке</a>
         </div>
     </div>
 
@@ -92,7 +88,7 @@
         </div>
         <div class="level-center">
             <div class="level-top">
-                <a class="navbar-item" id="settings"><i class="fa fa-gear"></i> Настройки</a>
+                <a class="navbar-item" id="set-device"><i class="fa fa-gear"></i> Устройство вывода</a>
 
                 <div class="navbar-item has-dropdown has-dropdown-up is-hoverable">
                     <a class="navbar-link"><i class="fa fa-external-link"></i> Ссылки</a>
@@ -171,6 +167,19 @@
         </button>
     </div>
 </nav>
+
+<div class="modal" id="devices">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Выберите устройство вывода звука</p>
+            <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+            <div class="list is-hoverable"></div>
+        </section>
+    </div>
+</div>
 
 </body>
 </html>
