Selectable, multi dragging and batch delete

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </p>
         </div>
         <div class="items">
-            <a class="panel-block">в разработке</a>
+            <a class="panel-block">...в разработке...</a>
         </div>
     </div>
 
@@ -89,6 +89,8 @@
         <div class="level-center">
             <div class="level-top">
                 <a class="navbar-item" id="set-device"><i class="fa fa-gear"></i> Устройство вывода</a>
+
+                <a class="navbar-item" id="help"><i class="fa fa-question-circle"></i> Помощь</a>
 
                 <div class="navbar-item has-dropdown has-dropdown-up is-hoverable">
                     <a class="navbar-link"><i class="fa fa-external-link"></i> Ссылки</a>
