Add help, prepare for release

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="level-top">
                 <a class="navbar-item" id="set-device"><i class="fa fa-gear"></i> Устройство вывода</a>
 
-                <a class="navbar-item" id="help"><i class="fa fa-question-circle"></i> Помощь</a>
+                <a class="navbar-item" id="show-help"><i class="fa fa-question-circle"></i> Помощь</a>
 
                 <div class="navbar-item has-dropdown has-dropdown-up is-hoverable">
                     <a class="navbar-link"><i class="fa fa-external-link"></i> Ссылки</a>
@@ -179,6 +179,62 @@
         </header>
         <section class="modal-card-body">
             <div class="list is-hoverable"></div>
+        </section>
+    </div>
+</div>
+
+<div class="modal" id="help">
+    <div class="modal-background"></div>
+    <div class="modal-card">
+        <header class="modal-card-head">
+            <p class="modal-card-title">Помощь</p>
+            <button class="delete" aria-label="close"></button>
+        </header>
+        <section class="modal-card-body">
+            <div class="content">
+                <h3>Основные понятия</h3>
+                <ul>
+                    <li>Режим <b>редактирования</b> — позволяет редактировать страницы и блоки
+                    <li>Режим <b>воспроизведения</b> — для проигрывания звуков
+                    <li><b>Страница</b> — главная область по центру (с сеткой в режиме редактирования)
+                    <li><b>Блок</b> — прямоугольник с текстом, соответствующий звуку
+                    <li><b>Таб</b> — заголовок страницы вверху экрана (для переключения)
+                    <li><b>Колода</b> — правая панель с добавленными, но не размещенными на странице звуками
+                    <li><b>Навигатор</b> — левая панель со списком страниц и другой информацией
+                    <li><b>PPv2</b> — Prank Player v2, старый плеер для технопранков (by Pyro)
+                </ul>
+
+                <h3>Глобальные сочетания клавиш</h3>
+                <ul>
+                    <li><b>Пробел</b> — войти в режим редактирования или закрыть колоду
+                    <li><b>Ctrl+Пробел</b> — открыть колоду и войти в режим редактирования
+                    <li><b>Ctrl+S</b> — сохранить базу вручную
+                    <li>Цифры <b>1..9</b> — быстрое переключение табов</li>
+                    <li><b>Ctrl+W</b> — закрыть текущий таб
+                    <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
+                </ul>
+
+                <h3>В режиме воспроизведения</h3>
+                <ul>
+                    <li><b>Левая</b> кнопка на блоке — проиграть звук
+                </ul>
+
+                <h3>В режиме редактирования</h3>
+                <ul>
+                    <li><b>Левая</b> кнопка на блоке (нажать и двигать) — переместить</li>
+                    <li><b>Правая</b> кнопка на блоке (нажать и двигать) — изменить размер</li>
+                    <li><b>Колесо</b> на блоке — проиграть звук</li>
+                    <li><b>Левая</b> кнопка на пустой области (нажать и двигать) — выделение блоков</li>
+                    <li><b>Delete</b> — удаление выделенных блоков в колоду</li>
+                </ul>
+
+                <h3>Добавление файлов/папок из проводника (drag'n'drop)</h3>
+                <ol>
+                    <li>Перейти в режим <b>редактирования</b> или открыть <b>колоду</b></li>
+                    <li><b>Выделить</b> файлы/папки в проводнике</li>
+                    <li><b>Перенести</b> их в окно плеера в область <b>колоды</b> или <b>нижней панели</b> (не на сетку)</li>
+                </ol>
+            </div>
         </section>
     </div>
 </div>
