Unload howls when closing tabs, don't add tabs when mass adding PPv2, more hotkeys

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' data:">
     <script src="custom.js"></script>
     <link rel="stylesheet" href="index.css">
 </head>
