Edit blocks with Ctrl key, update help

--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
 
                 <h3>Глобальные сочетания клавиш</h3>
                 <ul>
-                    <li><b>Пробел</b> — войти в режим редактирования или закрыть колоду
-                    <li><b>Ctrl+Пробел</b> — открыть колоду и войти в режим редактирования
+                    <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
-                    <li>Цифры <b>1..9</b> — быстрое переключение табов</li>
+                    <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение табов (1-10)</li>
+                    <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение табов (11-20)</li>
                     <li><b>Ctrl+W</b> — закрыть текущий таб
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
                 </ul>
@@ -193,6 +193,7 @@
                 <ul>
                     <li><b>Левая</b> кнопка на блоке (нажать и двигать) — переместить</li>
                     <li><b>Правая</b> кнопка на блоке (нажать и двигать) — изменить размер</li>
+                    <li><b>Ctrl+Правая</b> кнопка на блоке — переименовать</li>
                     <li><b>Колесо</b> на блоке — проиграть звук</li>
                     <li><b>Левая</b> кнопка на пустой области (нажать и двигать) — выделение блоков</li>
                     <li><b>Delete</b> — удаление выделенных блоков в колоду</li>
@@ -200,9 +201,9 @@
 
                 <h3>Добавление файлов/папок из проводника (drag'n'drop)</h3>
                 <ol>
-                    <li>Перейти в режим <b>редактирования</b> или открыть <b>колоду</b></li>
+                    <li>Перейти в режим <b>редактирования</b></li>
                     <li><b>Выделить</b> файлы/папки в проводнике</li>
-                    <li><b>Перенести</b> их в окно плеера в область <b>колоды</b> или <b>нижней панели</b> (не на сетку)</li>
+                    <li><b>Перенести</b> их в окно плеера в область <b>колоды</b> (правой панели)</li>
                 </ol>
             </div>
         </section>
