--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
                     <li><b>Колода</b> — правая панель с добавленными, но не размещенными на странице звуками
                     <li><b>Навигатор</b> — левая панель со списком страниц и другой информацией
                     <li><b>PPv2</b> — Prank Player v2, старый плеер для технопранков (by Pyro)
+                    <li>Поддерживаемые <b>форматы аудио</b>:<br>MP3, MPEG, OPUS, OGG, OGA, WAV, AAC, CAF, M4A, MP4, WEBA, WEBM, DOLBY, FLAC</li>
                 </ul>
 
                 <h3>Глобальные сочетания клавиш</h3>
