Allow zooming the interface and save the value, reduce notification time

--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@
                 <ul>
                     <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
+                    <li><b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
                     <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение табов (1-10)</li>
                     <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение табов (11-20)</li>
                     <li><b>Ctrl+W</b> — закрыть текущий таб
