Refactor zoom function, update title, deselect elements, fix close popup

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </nav>
 </div>
 
-<div class="modal" id="devices">
+<div class="modal no-drag" id="devices">
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head">
@@ -153,7 +153,7 @@
     </div>
 </div>
 
-<div class="modal" id="help">
+<div class="modal no-drag" id="help">
     <div class="modal-background"></div>
     <div class="modal-card">
         <header class="modal-card-head">
@@ -193,11 +193,11 @@
 
                 <h3>В режиме редактирования</h3>
                 <ul>
-                    <li><b>Левая</b> кнопка на блоке (нажать и двигать) — переместить</li>
-                    <li><b>Правая</b> кнопка на блоке (нажать и двигать) — изменить размер</li>
+                    <li><b>Левая</b> кнопка на блоке (зажать и двигать) — переместить</li>
+                    <li><b>Правая</b> кнопка на блоке (зажать и двигать) — изменить размер</li>
                     <li><b>Ctrl+Правая</b> кнопка на блоке — переименовать</li>
                     <li><b>Колесо</b> на блоке — проиграть звук</li>
-                    <li><b>Левая</b> кнопка на пустой области (нажать и двигать) — выделение блоков</li>
+                    <li><b>Левая</b> кнопка на пустой области (зажать и двигать) — выделение блоков</li>
                     <li><b>Delete</b> — удаление выделенных блоков в колоду</li>
                 </ul>
 
