--- a/index.html
+++ b/index.html
@@ -179,11 +179,14 @@
                 <ul>
                     <li><b>Пробел</b> — войти в режим редактирования
                     <li><b>Ctrl+S</b> — сохранить базу вручную
-                    <li><b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
+                    <li><b>+/−</b> или <b>Ctrl+Колесо</b> — зум, масштабирование интерфейса</li>
                     <li>Цифры <b>1, 2, 3, 4, 5, 6, 7, 8, 9, 0</b> — быстрое переключение табов (1-10)</li>
-                    <li>Буквы <b>q, w, e, r, t, y, u, i, o, p</b> — быстрое переключение табов (11-20)</li>
+                    <li>Буквы <b>q, w, e, r, t, y, ..., n, m</b> — быстрое переключение табов (11-35)</li>
                     <li><b>Ctrl+W</b> — закрыть текущий таб
                     <li><b>Правая</b> кнопка на странице (нажать) — пауза или продолжение воспроизведения звука</li>
+                    <li><b>Левая</b> кнопка в навигаторе страниц (зажать и перенести на вкладки) — открыть страницу
+                    <li><b>Левая</b> кнопка в навигаторе страниц (<b>двойной клик</b>) — открыть страницу</li>
+                    <li><b>Правая</b> кнопка на звуке в колоде — воспроизвести звук</li>
                 </ul>
 
                 <h3>В режиме воспроизведения</h3>
@@ -199,6 +202,7 @@
                     <li><b>Колесо</b> на блоке — проиграть звук</li>
                     <li><b>Левая</b> кнопка на пустой области (зажать и двигать) — выделение блоков</li>
                     <li><b>Delete</b> — удаление выделенных блоков в колоду</li>
+                    <li><b>Левая</b> кнопка на звуке в колоде (<b>двойной клик</b>) — добавить звук в пустое место</li>
                 </ul>
 
                 <h3>Добавление файлов/папок из проводника (drag'n'drop)</h3>
